# henan-toponym

./: Cargo.toml  README.md  county_codes.txt
docs/: place_type_code_usage.md
examples/: client_filter_by_type.rs  details.rs  rural_settlements.rs  search.rs  search_by_type.rs  test_place_type_code.rs  test_place_type_code_filter.rs  test_place_type_code_real.rs
src/: cli.rs  details.rs  division.rs  division_query.rs  download.rs  filter.rs  lib.rs  main.rs  search.rs
src/api/: cli.rs  details.rs  division.rs  mod.rs  search.rs
