[package]
name = "henan-toponym"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
derive_builder = { version = "0.20.2", features = ["clippy"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
